# open.gl

./: CMakeLists.txt  include.h  main.cpp
core/: ShaderLoader.cpp  ShaderLoader.h
shaders/: simple.frag  simple.vert
